<resources>
    <string name="app_name">AIHotel</string>

    <string name="tab_text_1">预定</string>
    <string name="tab_text_2">美食</string>
    <string name="tab_text_3">健身</string>
    <string name="tab_text_4">圈子</string>


    <string name="tab_order_text_1">全部</string>
    <string name="tab_order_text_2">待付款</string>
    <string name="tab_order_text_3">待使用</string>
    <string name="tab_order_text_4">待评价</string>
    <string name="tab_order_text_5">退款/售后</string>

    <string name="errorFile" formatted="false">文件错误: %d %s</string>

    <string name="font_usercenter">&#xe604;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">2020 Android</string>
    <string name="nav_header_subtitle">A07 Demo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!--后端-->
    <string name="api_host_test">http://192.168.124.8:8080/test/</string>
<!--    <string name="api_host_test">http://shihuan.site:6666/test/</string>-->
    <string name="api_host">http://shihuan.site/test/</string>
    <!--Iconfont-->

    <string name="tel">&#xe621;</string>
    <string name="map">&#xe608;</string>
    <string name="search">&#xe627;</string>
    <string name="around">&#xe675;</string>
    <string name="iconfont_share">&#xe602;</string>
    <string name="iconfont_comment">&#xe679;</string>
    <string name="iconfont_like">&#xe618;</string>
    <string name="iconfont_more">&#xe647;</string>
    <string name="arrow_down">&#xec46;</string>
    <string name="person">&#xebd1;</string>
    <string name="arrow_right">&#xebc7;</string>
    <string name="tel_book">&#xeb96;</string>
    <string name="arrow_left">&#xebc6;</string>
    <string name="arrow_up">&#xebab;</string>

    <!-- 支付宝 -->
    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private" >Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>

    <!--settings、choose function page-->
    <string name="page_preview">face attributes detect(video)</string>
    <string name="page_ir_preview">ir liveness detect(video)</string>
    <string name="page_face_recognize">face compare 1:n(video vs database,rgb liveness detect)</string>
    <string name="page_ir_face_recognize">face compare 1:n(video vs database,ir liveness detect)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="page_face_manage">face manage</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="library_not_found">library not found, please check if you put .so files into the project directory app\\src\\main\\jniLibs</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>

    <!--face attributes detect(image) page-->
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="processing">processing</string>

    <!--face compare 1:n(image vs image) page-->
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>

    <!--global get picture failed notification-->
    <string name="get_picture_failed">failed to get picture!</string>

    <!--global permission denied notification-->
    <string name="permission_denied">permission denied!</string>

    <!--global init failed notification-->
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>

    <!--single/dual camera register&recognize page-->
    <string name="register">register</string>
    <string name="switch_camera">switch camera</string>
    <string name="switch_camera_failed">switch camera failed</string>
    <string name="notice_change_detect_degree">camera switched, if no face detected, please change face detect degree in homepage</string>
    <string name="recognize_failed_notice">DENIED:%s</string>
    <string name="recognize_success_notice">PASS:%s</string>
    <string name="low_confidence_level">face low confidence level</string>
    <string name="specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="draw_ir_rect_mirror_horizontal">draw IR face rect mirror horizontal</string>
    <string name="draw_ir_rect_mirror_vertical">draw IR face rect mirror vertical</string>

    <!--batch process dialog-->
    <string name="progress_dialog_batch_register">progress: %d / %d</string>
    <string name="progress_dialog_registering_please_wait">registering,please wait</string>

    <!--batch process-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="batch_process_notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="batch_process_no_face_need_to_delete">no face need to delete</string>
    <string name="batch_process_confirm_delete">delete those %d images and face features?</string>
    <string name="batch_process_batch_register">batch register</string>
    <string name="batch_process_notification">notification</string>
    <string name="batch_process_clear_faces">clear faces</string>
    <string name="batch_process_path_is_not_exists">path \n%s\n is not exists</string>
    <string name="batch_process_path_is_not_dir">path \n%s\n is not a directory</string>
    <string name="batch_process_processing_please_wait">process start,please wait</string>
    <string name="batch_process_finished_info">process finished!\ntotal count =  %d \nsuccess count = %d \nfailed count = %d \nfailed images are in directory \' %s \'</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
