<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/colorWhite"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        >
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@color/colorGray"
            >
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            >
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="王尼玛"
                >

            </TextView>
            <TextView
                android:id="@+id/share_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="10分钟前·发表了动态"
                >

            </TextView>

        </LinearLayout>
        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/iconfont_more"
            >

        </TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="adasdasdasdasdasdsadasdasd\nasdsadasdasd\nasdasdsadas"
        >

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/picture_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_marginTop="15dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:textSize="20dp"
                android:text="@string/iconfont_share"
                >

            </TextView>
            <TextView
                android:id="@+id/share_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/comment_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconfont_comment"
                android:textSize="20dp"
                android:paddingHorizontal="5dp"
                >

            </TextView>
            <TextView
                android:id="@+id/comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:textSize="20dp"
                android:text="@string/iconfont_like"
                >

            </TextView>
            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>