<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        >
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:paddingHorizontal="15dp"
                android:paddingBottom="20dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    >
                    <TextView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="16dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:onClick="back"
                        android:text="@string/arrow_left">
                    </TextView>
                    <TextView
                        android:id="@+id/hotel_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:maxWidth="300dp"
                        android:text="天穆大酒店"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorWhite"
                        ></TextView>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="15dp"
                    android:background="@drawable/course_bg"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:id="@+id/date_str"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3月11日 \\ 3月12日 共一晚"
                            android:paddingVertical="4dp"
                            >

                        </TextView>
                        <TextView
                            android:id="@+id/room_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="单人房"
                            android:textSize="12dp"
                            >

                        </TextView>
                        <TextView
                            android:id="@+id/bed_type_and_breakfast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="大床·不含早"
                            android:textSize="12dp"
                            >

                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="房型详情"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12dp"
                            >

                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                >
                <!--房间数量-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/border_top_1dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="房间数量">

                    </TextView>
                    <TextView
                        android:id="@+id/room_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_weight="1"
                        android:text="1间">

                    </TextView>
                    <TextView
                        android:id="@+id/room_more"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/arrow_down"
                        android:gravity="center"
                        android:paddingHorizontal="15dp"
                        android:onClick="toggleRoomChoose"
                        >

                    </TextView>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/room_num_choose"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:overScrollMode="never"
                        >

                    </androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>
                <!--住客姓名-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/border_top_1dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="住客姓名"
                        android:padding="15dp"
                        >

                    </TextView>

                    <LinearLayout
                        android:id="@+id/layout_guests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                            <EditText
                                android:id="@+id/guest_name"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:paddingVertical="10dp"
                                android:hint="每间房填写一位住客姓名"
                                android:textCursorDrawable="@drawable/edittext_cursor"
                                android:textSize="14dp"
                                android:background="@null"
                                android:singleLine="true"
                                >

                            </EditText>
                            <TextView
                                android:id="@+id/name_more"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:paddingHorizontal="15dp"
                                android:gravity="center"
                                android:text="@string/person">

                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!--联系手机-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_top_1dp"
                    >
                    <TextView
                        android:id="@+id/tel_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="联系手机"
                        android:padding="15dp"
                        >

                    </TextView>
                    <EditText
                        android:id="@+id/tel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:paddingVertical="10dp"
                        android:textCursorDrawable="@drawable/edittext_cursor"
                        android:hint="18172598351(自动获取)"
                        android:textSize="14dp"
                        android:background="@null"
                        >

                    </EditText>
                    <TextView
                        android:id="@id/tel_more"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="15dp"
                        android:gravity="center"
                        android:text="@string/arrow_down">

                    </TextView>
                </LinearLayout>
                <!--预计到店-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_top_1dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="预计到店">

                    </TextView>

                    <TextView
                        android:id="@+id/arrive_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="16:00 (房间将整晚保留)">

                    </TextView>
                    <TextView
                        android:id="@+id/time_more"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:onClick="toggleTimeChoose"
                        android:paddingHorizontal="15dp"
                        android:gravity="center"
                        android:text="@string/arrow_down">

                    </TextView>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/arrive_time_choose"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:overScrollMode="never"
                        >

                    </androidx.recyclerview.widget.RecyclerView>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                android:background="@color/colorWhite"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="优惠"
                    android:paddingVertical="8dp"
                    >

                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="促销活动">

                    </TextView>
                    <!-- 促销 -->
                    <TextView
                        android:id="@+id/promotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:layout_weight="1"
                        android:text="暂无"
                        android:textColor="@color/colorPrimary"
                        >

                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrow_down">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            android:background="@drawable/border_top_1dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥127"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary">

                </TextView>
                <TextView
                    android:id="@+id/discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="已优惠 ￥22"
                    android:textSize="12dp"
                    android:textColor="@color/black">
                </TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/pay_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrow_right"
                android:layout_gravity="center"
                android:textSize="14dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="提交订单"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                >

            </TextView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

